# finance-all-in-one

./: .gitignore  LICENSE  README.md  SKILL.md  __init__.py  api.py  cli.py  config.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
core/: __init__.py  cache.py  exceptions.py  fetcher.py  normalizer.py  result.py  router.py
data_types/: __init__.py  etf.py  fund.py  futures.py  hk.py  index.py  macro.py  news.py  options.py  stock.py  xueqiu_portfolio.py
sources/: akshare.py  alpaca.py  baidu_stock.py  baostock.py  eastmoney_intraday.py  efinance.py  finnhub.py  fmp.py  ftshare.py  mootdx.py  netease.py  sina.py  sohu.py  tencent.py  ths.py  tushare.py  twelve_data.py  xueqiu.py  yfinance.py
tests/: test_batch_fetch.py  test_cache.py  test_enhanced_adapters.py  test_fetcher.py  test_ftshare_adapter.py  test_normalizer.py  test_router.py
tests/e2e/: REPORT.md  test_sources_live.py
