[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "finance-all-in-one"
version = "0.1.0a0"
description = "Unified free financial data retrieval layer with automatic routing and fallback."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "Zhang Chao" }
]
keywords = ["finance", "market-data", "stocks", "claude-skill"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
dependencies = [
    "pandas>=1.5.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
adapters = [
    "akshare>=1.12.0",
    "efinance>=0.5.0",
    "yfinance>=0.2.0",
    "thsdk>=1.0.0",
    "mootdx>=1.0.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "tabulate>=0.9.0",
]

[project.scripts]
finance-all-in-one = "cli:main"

[tool.setuptools]
packages = ["core", "sources", "data_types", "utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"
